--- a/engineer/themes/oleb/templates/theme/post_list.html
+++ b/engineer/themes/oleb/templates/theme/post_list.html
@@ -11,28 +11,25 @@
                 {% include 'theme/_single_post_front.html' %}
             {% endfor %}
         </div>
-        <div class="row archives">
+        <div class="row">
             <div class="four columns">
                 {% if has_next %}
-                    <div class="button"><a href="{{ urlname('listpage', (slice_num + 1)) }}">
-                        ← older posts</a></div>
+                    <a href="{{ urlname('listpage', (slice_num + 1)) }}">← older posts</a>
                 {% endif %}
             </div>
             <div class="four columns" style="text-align: center;">
                 <a href="{{ urlname('archives') }}"> &mdash; archives &mdash; </a>
             </div>
-            <div class="four columns">
-                <div class="button">
-                    {% if has_previous %}
-                        <a href="{{ urlname('listpage', (slice_num - 1)) }}">newer posts →</a>
-                    {% endif %}
-                </div>
+            <div class="four columns" style="text-align: right;">
+                {% if has_previous %}
+                    <a href="{{ urlname('listpage', (slice_num - 1)) }}">newer posts →</a>
+                {% endif %}
             </div>
         </div>
     {% else %}
         <div>
             <h1>Hmmm, looks like there's nothing here... How about checking the
-                <a href="">archives</a>?</h1>
+                <a href="{{ urlname('archives') }}">archives</a>?</h1>
         </div>
     {% endif %}
 {% endblock %}
