--- a/engineer/themes/dark_rainbow/templates/theme/post_list.html
+++ b/engineer/themes/dark_rainbow/templates/theme/post_list.html
@@ -32,7 +32,7 @@
     {% else %}
         <div>
             <h1>Hmmm, looks like there's nothing here... How about checking the
-                <a href="">archives</a>?</h1>
+                <a href="{{ urlname('archives') }}">archives</a>?</h1>
         </div>
     {% endif %}
 {% endblock %}
