--- a/engineer/themes/oleb/templates/theme/base.html
+++ b/engineer/themes/oleb/templates/theme/base.html
@@ -2,6 +2,11 @@
 
 {%- from 'core/_macros.html' import render_less_link -%}
 
+{% block site_title %}
+    {% block page_title %}{% endblock %}
+    {% if self.page_title() %}: {% endif %}{{ super() }}
+{% endblock %}
+
 {%- block stylesheets %}
     {{ render_less_link('theme/stylesheets/oleb.less') }}
     {%- block additional_stylesheets %}
@@ -32,7 +37,7 @@
                 {%- block header_primary_content %}
                     <h1 class="{%- block header_primary_h1_class %}three columns{% endblock -%}">
                         {%- block header_primary_title %}
-                            <a href="{{ urlname('home') }}">{{ settings.SITE_TITLE }}</a>
+                            <a href="{{ urlname('home') }}">{{ settings.SITE_TITLE|title }}</a>
                         {% endblock -%}
                     </h1>
                 {% endblock -%}
@@ -67,8 +72,7 @@
         </div>
         <div class="row">
             {%- block footer %}
-                <footer class="
-                    {%- block footer_class %}twelve columns centered{% endblock -%}">
+                <footer>
                     {%- block footer_content %}
                         {% include '_footer.html' %}
                     {% endblock -%}
