--- a/engineer/themes/oleb/templates/theme/template_page_simple.html
+++ b/engineer/themes/oleb/templates/theme/template_page_simple.html
@@ -1,10 +1,22 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{# A simple template page layout that includes the default site sidebar. #}
 
-</body>
-</html>
+{% extends '/theme/template_page_base.html' %}
+
+{% block page_title %}Simple Template Page{% endblock %}
+
+{% block section_main_content %}
+    {% filter typogrify %}
+        <article class="template-page">
+            <header id="secondary">
+                <h1>{{ self.page_title() }}</h1>
+            </header>
+            {% block content %}
+                <div class="replace-me">
+                    <h1>A Simple Template Page</h1>
+
+                    <p>This is a simple template page!</p>
+                </div>
+            {% endblock %}
+        </article>
+    {% endfilter %}
+{% endblock %}
