--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -50,7 +50,6 @@ header#primary {
             &:hover {
                 color: @red;
                 background-color: transparent;
-                cursor: text;
             }
         }
     }
@@ -67,7 +66,7 @@ header#secondary {
 // ARTICLE STYLES //
 ////////////////////
 
-article, .post-content {
+.post-content {
     h1, h2, h3, h4, h5, h6 {
         a {
             text-decoration: none;
@@ -90,7 +89,11 @@ article, .post-content {
     }
 
     h3 {
-        font-size: @font-size-large;
+        font-size: @font-size-medium;
+    }
+
+    h4, h5, h6 {
+        font-size: @font-size-normal;
     }
 
     hr {
@@ -102,6 +105,21 @@ article, .post-content {
 
         &:hover {
             text-decoration: none;
+        }
+    }
+
+    ul {
+        list-style: none;
+        margin: 0;
+
+        li {
+            margin: 0.5rem 0;
+        }
+
+        & > li:before {
+            content: "»";//"â€¢";
+            padding-right: .5rem;
+            margin-left: -1rem;
         }
     }
 
@@ -174,13 +192,19 @@ article, .post-content {
 
     ul {
         display: inline;
-    }
+        list-style: none;
 
-    li:not(:last-child):after {
-        content: ", ";
+        & > li:before {
+            content: "";
+            margin-left: 0;
+            padding-right: 0;
+        }
+
+        & > li:not(:last-child):after {
+            content: ", ";
+        }
     }
 }
-
 .arrow {
     font-size: @font-size-xl;
 }
