Add missing selector.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -193,7 +193,7 @@ pre, code {
     overflow: auto;
 }
 
-p > code {
+p > code, em > code, strong > code {
     white-space: nowrap;
     .font-size-default();
     margin: 0;
