--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -288,7 +288,7 @@ pre, code {
     overflow: auto;
 }
 
-p > code {
+p > code, em > code, strong > code {
     .border-radius(2px);
     font-size: @font-main;
     white-space: nowrap;
