Fix bug preventing some template fragments from being included.
The nesting of the *_include blocks is unnecessary, and in at least one
theme (Dark Rainbow), caused template fragments to be ignored completely.

This change will be much easier on theme creators, since they won't have to
call {{ block.super() }} manually each time they override one of the common
blocks (e.g. stylesheets).

--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -42,10 +42,9 @@
         {% endif %}
     {% endblock %}
 
-    {% block stylesheets %}
-        {% block stylesheets_include %}
-            {% include ['_stylesheets.html', 'theme/_stylesheets.html'] ignore missing %}
-        {% endblock %}
+    {% block stylesheets %}{% endblock %}
+    {% block stylesheets_include %}
+        {% include ['_stylesheets.html', 'theme/_stylesheets.html'] ignore missing %}
     {% endblock %}
 
     {% block lesscss %}
@@ -64,10 +63,9 @@
         {% endif %}
     {% endblock %}
 
-    {% block scripts_top %}
-        {% block scripts_top_include %}
-            {% include ['_scripts_top.html', 'theme/_scripts_top.html'] ignore missing %}
-        {% endblock %}
+    {% block scripts_top %}{% endblock %}
+    {% block scripts_top_include %}
+        {% include ['_scripts_top.html', 'theme/_scripts_top.html'] ignore missing %}
     {% endblock %}
 
     {% block modernizr %}
@@ -124,10 +122,10 @@
     {%- endif %}
 {% endblock %}
 
-{% block scripts_bottom %}
-    {% block scripts_bottom_include %}
-        {% include ['_scripts_bottom.html', 'theme/_scripts_bottom.html'] ignore missing %}
-    {% endblock %}
+{% block scripts_bottom %}{% endblock %}
+{% block scripts_bottom_include %}
+    {% include ['_scripts_bottom.html', 'theme/_scripts_bottom.html'] ignore missing %}
 {% endblock %}
+
 </body>
 </html>
