--- a/engineer/themes/oleb/templates/theme/_single_post.html
+++ b/engineer/themes/oleb/templates/theme/_single_post.html
@@ -20,11 +20,13 @@
                             <time datetime="{{ post.timestamp|localtime|date("%Y-%m-%d %Z") }}" pubdate="">
                                 {{ post.timestamp|localtime|date("%B %d, %Y") }}
                             </time>
-                            <div class="permalink">
+                            <div>
+                            <span class="permalink">
                                 <a href="{{ post.url }}"
                                    title="Permanent link to '{{ post.title }}'">Permalink</a>
+                                </span>
                                 {% if post.via %}
-                                    <span class="attribution">| via
+                                    <span class="attribution">via
                                         {% if post.via_link %}
                                             <a href="{{ post.via_link }}">{{ post.via }}</a>
                                         {% else %}
