--- a/engineer/themes/oleb/templates/theme/_single_post_front.html
+++ b/engineer/themes/oleb/templates/theme/_single_post_front.html
@@ -14,19 +14,19 @@
                         {{ post.timestamp|localtime|date("%B %d") }}
                     </time>
                     {% if link %}
-                        <span class="permalink"> | <a href="{{ post.url }}"
-                                                      title="Permanent link to '{{ post.title }}'">Permalink</a>
+                        <span class="permalink"><a href="{{ post.url }}"
+                                                   title="Permanent link to '{{ post.title }}'">Permalink</a>
                     </span>
                     {% endif %}
                     {% if post.via %}
-                                <span class="attribution">
-                                | via {% if post.via_link %}
-                                        <a href="{{ post.via_link }}">{{ post.via }}</a>
-                                    {% else %}
-                                        {{ post.via }}
-                                    {% endif %}
+                        <span class="attribution">
+                                via {% if post.via_link %}
+                            <a href="{{ post.via_link }}">{{ post.via }}</a>
+                        {% else %}
+                            {{ post.via }}
+                        {% endif %}
                                 </span>
-                            {% endif %}
+                    {% endif %}
                     {{ post.content|safe }}
                 </article>
             {% endwith %}
