Fix erroneous blockquote width in oleb theme.

--- a/engineer/static/engineer/_base_mixins.less
+++ b/engineer/static/engineer/_base_mixins.less
@@ -72,8 +72,8 @@
 }
 
 .dotted-border(@_, @color: #000, @size: 3px) {
+    // All uses of the .dotted-border mixin will get these properties
     margin: 0.5em auto;
-    width: 100%;
     display: block;
     clear: both;
 }
