Remove widont filter on post titles.
Since post titles are often short, widont can actually cause layout
problems on phones and other mobile devices.

--- a/engineer/themes/dark_rainbow/templates/theme/_single_post.html
+++ b/engineer/themes/dark_rainbow/templates/theme/_single_post.html
@@ -30,7 +30,7 @@
                 <header>
                     <h1>
                         <a href="{% if link %}{{ post.link }}{% else %}
-        {{ post.url }}{% endif %}">{{ post.title|typogrify }}</a>
+        {{ post.url }}{% endif %}">{{ post.title|typogrify_no_widont }}</a>
                         {% if link %}<span class="arrow">→</span>{% endif %}
                     </h1>
                 </header>
