--- a/engineer/themes/dark_rainbow/templates/theme/post_list.html
+++ b/engineer/themes/dark_rainbow/templates/theme/post_list.html
@@ -5,34 +5,32 @@
 {% endblock %}
 
 {% block section_main_content %}
-    {% if post_list %}
-        <div class="posts">
-            {% for post in post_list %}
-                {% include 'theme/_single_post.html' %}
-            {% endfor %}
-        </div>
-        <div class="row archives">
-            <div class="four columns">
-                {% if has_next %}
-                    <div class="button left"><a href="{{ urlname('listpage', (slice_num + 1)) }}">
-                        ← older posts</a></div>
-                {% endif %}
-            </div>
-            <div class="four columns" style="text-align: center;">
-                <a href="{{ urlname('archives') }}"> &mdash; archives &mdash; </a>
-            </div>
-            <div class="four columns">
-                <div class="button right">
+    <div class="posts">
+        {% for post in post_list %}
+            {% include 'theme/_single_post.html' %}
+        {% endfor %}
+    </div>
+    <div class="row archives">
+        <div class="twelve columns">
+            <ul class="block-grid three-up">
+                <li style="text-align: left;">
+                    {% if has_next %}
+                        <a href="{{ urlname('listpage', (slice_num + 1)) }}">← older posts</a>
+                    {% else %}
+                        &nbsp;
+                    {% endif %}
+                </li>
+                <li style="text-align: center;">
+                    <a href="{{ urlname('archives') }}"> &ndash; archives &ndash; </a>
+                </li>
+                <li style="text-align: right;">
                     {% if has_previous %}
                         <a href="{{ urlname('listpage', (slice_num - 1)) }}">newer posts →</a>
+                    {% else %}
+                        &nbsp;
                     {% endif %}
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
-    {% else %}
-        <div>
-            <h1>Hmmm, looks like there's nothing here... How about checking the
-                <a href="{{ urlname('archives') }}">archives</a>?</h1>
-        </div>
-    {% endif %}
+    </div>
 {% endblock %}
