Tweak phone layout.

--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -391,6 +391,20 @@ footer {
     }
 }
 
+//////////////////////////////
+// PHONE LAYOUT ADJUSTMENTS //
+//////////////////////////////
+
+@media only screen and (max-width: 767px) {
+    header#primary {
+        padding-bottom: .75rem;
+
+        nav ul li {
+            padding-right: 0;
+        }
+    }
+}
+
 //////////////////////////
 // TEMPLATE PAGE STYLES //
 //////////////////////////
