--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -1,9 +1,7 @@
 @import "../../engineer/_base_mixins.less";
-//@import "_mixins.less";
 @import "_colors.less";
 @import "_typography.less";
 @import "_element_styles.less";
-//@import "../../engineer/_solarized.less";
 
 ///////////////////
 // HEADER STYLES //
@@ -117,7 +115,7 @@ header#secondary {
         }
 
         & > li:before {
-            content: "»";//"â€¢";
+            content: "»";
             padding-right: .5rem;
             margin-left: -1rem;
         }
@@ -256,7 +254,8 @@ header#secondary {
     padding-right: 10px;
 }
 
-pre, code, div.codehilite { // nice scrollbars in webkit
+pre, code, div.codehilite {
+    // nice scrollbars in webkit
     ::-webkit-scrollbar {
         height: 10px;
         width: 10px;
