Add post break postprocessor.
This postprocessor checks for a -- more -- tag in the content of a post and
splits the post accordingly.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -147,6 +147,17 @@ article {
     }
 }
 
+.button {
+    .border-radius(2px);
+    background-color: @bg-accent;
+    padding: 10px;
+
+    &:hover {
+        background-color: @orange;
+        color: @bg-accent;
+    }
+}
+
 // PYGMENTS / CODE
 .linenodiv {
     color: @light;
